fixed alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,42 @@ body {
   margin-top: 1rem;
 }
 
+.card-grid-container {
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: repeat(6, 1fr);
+}
+
+.card-grid-item1 {
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.card-grid-item2 {
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.card-grid-item3 {
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+.card-grid-item4 {
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+
+.card-grid-item5 {
+  grid-row-start: 5;
+  grid-row-end: 6;
+}
+
+.card-grid-item6 {
+  grid-row-start: 6;
+  grid-row-end: 7;
+}
+
 .card-project-container {
   display: flex;
   flex-direction: column;
@@ -507,7 +543,7 @@ body {
 }
 
 .lang-Css1 {
-  width: 55px;
+  width: 60px;
   height: 24px;
   padding: 12px 0px;
   font-family: 'Inter', sans-serif;
@@ -571,7 +607,7 @@ body {
 }
 
 .frameworks-ror {
-  width: 130px;
+  width: 137px;
   height: 24px;
   margin-bottom: 1rem;
 }
@@ -646,7 +682,7 @@ body {
 }
 
 .skills-cp {
-  width: 80px;
+  width: 90px;
   height: 24px;
   margin-bottom: 1rem;
 }
